Add package scan to ObjectConfig